<resources>
    <string name="app_name" translatable="false">PortfolioFB</string>
    <string name="action_settings" translatable="false">Einstellungen</string>
    <string name="action_contact_mail" translatable="false">Franz eine Nachricht senden</string>
    <string name="action_contact_phone" translatable="false">Franz anrufen</string>
    <string name="email_address" translatable="false">FranzBrand@gmx.at</string>
    <string name="title_message_chooser" translatable="false">Nachricht senden</string>
    <string name="email_subject" translatable="false">PortfolioFB</string>
    <string name="phone_number" translatable="false">06801234264</string>
    <string name="img_author_descr" translatable="false">Bild von Franz Brandstätter MSc</string>
    <string name="img_portrait2_descr" translatable="false">Portrait von Franz Brandstätter MSc</string>
    <string name="img_team_descr" translatable="false">Teamfoto Volleyball</string>
    <string name="img_team1_descr" translatable="false">Foto Teamwork</string>
    <string name="img_urkunde_fhs_descr" translatable="false">Beim Salzburger Landespreis für Marketing, Kommunikation &amp; Design 2014 wurden wir für 
        das Masterprojekt "Noomix" mit dem ausgezeichneten 2. Platz geehrt.</string>
    <string name="ic_action_download_descr" translatable="false">Element downloaden</string>
    <string name="name" translatable="false">Franz Brandstätter MSc</string>
    <string name="profession" translatable="false">Ihr neuer Mitarbeiter?</string>
    <string name="slogan" translatable="false">Lernen Sie mich kennen!</string>
    <string name="btn_private" translatable="false">Privat</string>
    <string name="btn_projects" translatable="false">Projekte</string>
    <string name="tabTitle_privat_fragment_aboutMe" translatable="false">Über mich</string>
    <string name="tabTitle_privat_fragment_documents" translatable="false">Dokumente</string>
    <string name="tabTitle_project_fragment_creative" translatable="false">Kreativ</string>
    <string name="tabTitle_project_fragment_technical" translatable="false">Technisch</string>
    <string name="title_activity_privat" translatable="false">Privat</string>
    <string name="title_activity_projects" translatable="false">Projekte</string>
    <string name="title_activity_project_item_obj" translatable="false">3D-Model</string>
    <string name="project_item_obj_show" translatable="false">3D-Modell</string>
    <string name="project_item_obj_dialog_title" translatable="false">Bitte warten&#8230;</string>
    <string name="project_item_obj_dialog_message" translatable="false">3D-Modell wird geladen</string>
    <string name="pageTitle_activity_project_technical_details" translatable="false">Technische Projekte</string>
    <string name="pageTitle_activity_project_creative_details" translatable="false">Kreative Projekte</string>
    <string name="pdf_show_local_progress_title" translatable="false">Download</string>
    <string name="pdf_show_local_progress_content" translatable="false">PDF wird geladen</string>
    <string name="pdf_show_online_dialog_title" translatable="false">PDF Viewer</string>
    <string name="pdf_show_online_dialog_question" translatable="false">PDF via Google Drive anzeigen</string>
    <string name="pdf_show_online_dialog_button_no" translatable="false">Abbrechen</string>
    <string name="pdf_show_online_dialog_button_yes" translatable="false">OK</string>
    <string name="pdf_cv_title" translatable="false">Lebenslauf</string>
    <string name="pdf_cv_url" translatable="false">http://dl.dropbox.com/s/o4jdumwkwihhdak/Lebenslauf_Franz_Brandstaetter_web.pdf</string>
    <string name="pdf_bakk_report_title" translatable="false">Bachelorzeugnis</string>
    <string name="pdf_bakk_report_url" translatable="false">http://dl.dropbox.com/s/gqoy8mhbhj31bwd/Bachelorpruefungszeugnis_Franz_Brandstaetter.pdf</string>
    <string name="pdf_master_report_title" translatable="false">Masterzeugnis</string>
    <string name="pdf_master_report_url" translatable="false">"http://dl.dropbox.com/s/orucrxz599mv3tn/Masterpruefungszeugnis_Franz_Brandstaetter.pdf"</string>
    <string name="pdf_masterThesis_title" translatable="false">Masterthesis</string>
    <string name="pdf_masterThesis_url" translatable="false">http://www.pdf-archive.com/2014/03/05/masterthesis/masterthesis.pdf</string>
    <string name="pdf_bakkThesis_title" translatable="false">Bachelorthesis</string>
    <string name="pdf_bakkThesis_url" translatable="false">http://www.pdf-archive.com/2014/03/05/bachelorthesis/bachelorthesis.pdf</string>
    <string name="project_image_header_descr" translatable="false">Titelbild</string>
    <string name="project_group_technical_web_development" translatable="false">Webentwicklung</string>
    <string name="project_group_technical_web_security" translatable="false">Websicherheit</string>
    <string name="project_group_technical_apps" translatable="false">Apps</string>
    <string name="project_group_creative_3d" translatable="false">3D</string>
    <string name="project_group_creative_2d" translatable="false">2D</string>
    <string name="project_noomix_title" translatable="false">Noomix</string>
    <string name="project_noomix_description" translatable="false">Noomix ist ein 3rd person shooter und wurde für Windows, Mac, Linux und den 
        Web-Browser entwickelt. Dieses Produkt des Masterprojekts an der FH Salzburg wurde von einem 19-köpfigen Team realisiert.
        Zur Koordiantion dieses relativ großen Teams setzten wir auf agiles Projektmanagement mittels Scrum. Noomix ist stark mit
        ihrer Website verknüpft, wo Spieler umfangreiche Statistiken zum Spiel, ein Forum, eine Level-Galerie und vieles mehr finden.
        Gemeinsam mit zwei Kollegen entwickelte ich unter anderem diese Website mit entsprechender API basierend auf dem Framework "Ruby on Rails".
        \nEinige weitere Technologien/Gems, die wir für die Entwicklung der Website eingesetzt haben, sind: Apache, MySql, Passenger, Capistrano, AJAX&#8230;</string>
    <string name="project_noomix_img1_descr" translatable="false">Dieser Screenshot zeigt einen Ausschnitt der Website, welche mit dem shooter "Noomix" eng verbunden ist.</string>
    <string name="project_noomix_img2_descr" translatable="false">Das 19-köpfige Entwicklungsteam des 3rd person shooters "Noomix".</string>
    <string name="project_atikon_title" translatable="false">Atikon</string>
    <string name="project_atikon_report" translatable="false">Praktikumsbericht</string>
    <string name="project_atikon_description" translatable="false">Im Zuge des Berufspraktikums bei der Firma Atikon, welches ich abschließend zum Bachelorstudium an der FH Hagenberg absolvierte,
        konnte ich in der Abteilung Web das im Studium erlernte Wissen sehr gut in die Praxis umsetzen und erweitern. Eine große Bandbreite an unterschiedlichen Tätigkeiten
		bot mir einen Einblick in sehr viele Bereiche dieser Branche. Sowohl kommunikative,
		gestalterische, als auch technische Tätigkeiten prägten meinen
		Berufsalltag und ich konnte wertvolle, berufsbezogene Erfahrung sammeln.
		Der Schwerpunkt meiner Tätigkeiten lag darin, Webseiten-Aktualisierungen
		für Kunden durchzuführen. Während ich zu Beginn des Praktikums
		noch relativ einfache Änderungen realisierte, wurden mir mit zunehmender
		Erfahrung immer umfangreichere und komplexere Arbeiten anvertraut. Bei
		diesen Änderungen trat ich sehr häufig in direkten Kontakt mit Kunden,
		um die Lösungen optimal auf die jeweilige Problemstellung zuschneiden zu
		können.
		Durch die zahlreichen Wartungsarbeiten die ich durchführte, hatte ich
		Gelegenheit das CMS der Firma Atikon ausführlich kennen zu lernen. Neben
		diesen Arbeiten betreute ich einen neuen Kunden, für den ich
		das Screendesign entwerfen und die daraus resultierende Umsetzung durchführen
		durfte.
		Selbständiges und verantwortungsbewusstes Arbeiten standen ebenso im
		Mittelpunkt des Praktikums, wie effizientes Zeitmanagement und freundlicher
		Kundenkontakt. Außerdem durfte ich miterleben, dass gute Kommunikation
		innerhalb des Teams ein wesentlicher Bestandteil des Erfolgs der
		Firma Atikon ist. Um dies zu gewährleisten findet jede Woche eine abteilungsinterne
		Besprechung statt, wo die wichtigsten laufenden und zukünftigen
		Projekte besprochen werden.</string>
    <string name="project_freundlinger_title" translatable="false">Freundlinger</string>
    <string name="project_freundlinger_description" translatable="false">Für die Firma Freundlinger Luft und Klima entwickelte ich parallel zu meinem 
        Studium einen völlig neuen Web-Auftritt (das Design wurde dabei allerdings vorgegeben). Umgesetzt habe ich diesen Internetauftritt mit dem CMS Drupal,
        mit welchem ich durch meine Ausbildung an der FH Hagenberg und meinen privaten Projekten schon einiges an Erfahrung sammeln konnte.
        Die Website wird in zwei Sprachen angeboten und bietet zudem eine angepasste Version für mobile Endgeräte. Nach wie vor pflege ich aktiven
        Kundenkontakt mit dieser Firma und führe bei Bedarf etwaige Anpassungswünsche der Seite durch.</string>
    <string name="project_freundlinger_img1_descr" translatable="false">Dieser Screenshot zeigt die Startseite von Freundlinger.net.</string>
    <string name="project_freundlinger_img2_descr" translatable="false">Ein Screenshot einer Unterseite von Freundlinger.net.</string>
    <string name="project_freundlinger_img3_descr" translatable="false">Ein weiterer Screenshot einer Seite von Freundlinger.net.</string>
    <string name="project_artconsense_title" translatable="false">Artconsense</string>
    <string name="project_artconsense_description" translatable="false">Auch für die Firma Artconsense entwickelte ich eine Website basierend auf dem CMS Drupal. Das
        Design wurde dabei von selbiger Firma vorgegeben und ich konzentrierte mich demnach auf dessen Implementierung. Enge Zusammenarbeit mit der
        Firma bei der Umsetzung ihres Internetauftritts stellen ihre vollste Zufriedenheit mit der Website sicher. Bis dato unterstütze ich 
        Artconsense auch mit allfälligen Anpassungswünschen in Bezug auf ihre Seite.</string>
    <string name="project_artconsense_img1_descr" translatable="false">Screenshot der Startseite von artconsense.com.</string>
    <string name="project_artconsense_img2_descr" translatable="false">Screenshot einer Bildergalerie von artconsense.com.</string>
    <string name="project_artconsense_img3_descr" translatable="false">Screenshot einer weiteren Unterseite von artconsense.com.</string>
    <string name="project_swatchdog_title" translatable="false">S-Watchdog</string>
    <string name="project_swatchdog_description" translatable="false">Meine Masterarbeit an der FHS widmete ich dem Thema Web-Sicherheit. In Kooperation mit der 
        Firma Salzburg Research entwickelte ich eine "Richtlinienbasierte Zugriffskontrolle für RDF-Stores". Im Zuge der in Java 
        implementierten Arbeit konnte ich mein Wissen nicht nur im Bereich Semantic Web vertiefen, sondern auch meine Kompetenzen in der
        Java-Programmierung erweitern. Zudem konnte ich über den Zeitraum eines halben Jahres wertvolle Berufserfahrung als Java-Entwickler
        in der Forschung sammeln.</string>
    <string name="project_portfolioFB_title" translatable="false">PortfolioFB</string>
</resources>